[tool.poetry]
name = "laundry-booker"
version = "0.1.0"
description = ""
authors = ["thinkabout4x <pave-shherbakov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.13.0"
webdriver-manager = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
